--- a/style/navbar.css
+++ b/style/navbar.css
@@ -51,12 +51,14 @@ img{
     }
 
     /* HAMBÚRGUER */
-    .navbar-toggler-icon {
+    .nav-toggler-icon {
         font-size: 2rem;
         transition: .4s;
+
+        color: #3991be;
     }
 
-    .navbar-toggler-icon:hover {
+    .nav-toggler-icon:hover {
         font-size: 2.5rem;
     }
 
