--- a/style/guia.css
+++ b/style/guia.css
@@ -1,40 +1,29 @@
-/* TEXTO GERAL */
-.tp-rg-text {
-    color: #000;
-    font-weight: 700;
-    font-size: 2rem;
-}
-
-/*
-    GUIA TOP SIDE
-*/
-
 /* SOBRE */
 .top-range-sobre {
-    padding: 2rem 0;
+    padding: 2rem;
     background-color: #F1FDEC;
 }
 
 /* SOLAR */
 .top-range-solar {
-    padding: 2rem 0;
+    padding: 2rem;
     background-color: #ffd600;
 }
 
 /* EOLICA */
 .top-range-eolica {
-    padding: 2rem 0;
+    padding: 2rem;
     background-color: #b7b7b7;
 }
 
 /* HIDRA */
 .top-range-hidra {
-    padding: 2rem 0;
+    padding: 2rem;
     background-color: #1cb4d6;
 }
 
 /* MARE */
 .top-range-mare {
-    padding: 2rem 0;
+    padding: 2rem;
     background-color: #0085ff;
 }
