refactor(content-guide): adding some css and dinamically changing the text

--- a/style/guia.css
+++ b/style/guia.css
@@ -38,3 +38,12 @@
     cursor: pointer;
     user-select: none;
 }
+
+.guia-conteudo-btn i {
+    color: black;
+}
+
+#energia-atual, #energia-anterior, #energia-proximo {
+    color: black;
+    font-weight: bold;
+}
