--- a/style/conteudo.css
+++ b/style/conteudo.css
@@ -88,7 +88,7 @@
 }
 
 .quiz-alternative-active {
-    background-color: aquamarine;
+    background-color: #00d921;
 }
 
 .quiz-alternative-wrong {
