--- a/style/index.css
+++ b/style/index.css
@@ -189,3 +189,13 @@
     width: 20rem;
     height: auto;
 }
+
+/* FadeIn */
+.fade-in {
+    animation: fadeIn 1.5s;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
